--- a/report/llm-dataset-guide-2025-10-16/ko/index.html
+++ b/report/llm-dataset-guide-2025-10-16/ko/index.html
@@ -6,30 +6,30 @@
     <link rel="icon" href="https://www.pebblous.ai/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="https://www.pebblous.ai/apple-touch-icon.png">
 
-    <!-- SEO Meta Tags (자바스크립트로 동적 삽입됨) -->
-    <title id="page-title"></title>
-    <meta id="meta-description" name="description" content="">
-    <meta id="meta-keywords" name="keywords" content="">
+    <!-- SEO Meta Tags -->
+    <title id="page-title">LLM 학습용 오픈 데이터셋 가이드: 저작권 문제 없는 AI 및 데이터과학 분야를 중심으로 | Pebblous</title>
+    <meta id="meta-description" name="description" content="어떤 데이터로 LLM을 학습시켜야 할까요? 주요 AI 연구소의 성공 사례를 바탕으로, AI 및 데이터과학 분야에서 상업적 활용이 가능한 대규모 오픈 데이터셋(RedPajama, The Pile, Dolma 등)을 분석하고, LLM 학습을 위한 데이터셋 혼합 전략과 법적 고려사항을 제시합니다.">
+    <meta id="meta-keywords" name="keywords" content="LLM, 데이터셋, AI 학습 데이터, 오픈 데이터, 기술 문서, 저작권, RedPajama, The Pile, C4, Dolma, FineWeb, The Stack, arXiv, Wikipedia, Pebblous, 페블러스, 인공지능, 데이터 과학, 기계학습, 딥러닝">
     <meta name="robots" content="index, follow">
 
-    <link id="hreflang-ko" rel="alternate" hreflang="ko" href="">
-    <link id="hreflang-en" rel="alternate" hreflang="en" href="">
-    <link id="hreflang-default" rel="alternate" hreflang="x-default" href="">
+    <link id="hreflang-ko" rel="alternate" hreflang="ko" href="https://blog.pebblous.ai/report/llm-dataset-guide-2025-10-16/ko/">
+    <link id="hreflang-en" rel="alternate" hreflang="en" href="https://blog.pebblous.ai/report/llm-dataset-guide-2025-10-16/en/">
+    <link id="hreflang-default" rel="alternate" hreflang="x-default" href="https://blog.pebblous.ai/report/llm-dataset-guide-2025-10-16/en/">
 
-    <link id="canonical-url" rel="canonical" href="">
+    <link id="canonical-url" rel="canonical" href="https://blog.pebblous.ai/report/llm-dataset-guide-2025-10-16/ko/">
 
-    <meta id="og-url" property="og:url" content="">
-    <meta id="og-title" property="og:title" content="">
-    <meta id="og-description" property="og:description" content="">
-    <meta id="og-image" property="og:image" content="">
-    <meta id="og-image-width" property="og:image:width" content="">
-    <meta id="og-image-height" property="og:image:height" content="">
+    <meta id="og-url" property="og:url" content="https://blog.pebblous.ai/report/llm-dataset-guide-2025-10-16/ko/">
+    <meta id="og-title" property="og:title" content="LLM 학습용 오픈 데이터셋 가이드: 저작권 문제 없는 AI 및 데이터과학 분야를 중심으로 | Pebblous">
+    <meta id="og-description" property="og:description" content="어떤 데이터로 LLM을 학습시켜야 할까요? 주요 AI 연구소의 성공 사례를 바탕으로, AI 및 데이터과학 분야에서 상업적 활용이 가능한 대규모 오픈 데이터셋(RedPajama, The Pile, Dolma 등)을 분석하고, LLM 학습을 위한 데이터셋 혼합 전략과 법적 고려사항을 제시합니다.">
+    <meta id="og-image" property="og:image" content="https://blog.pebblous.ai/report/llm-dataset-guide-2025-10-16/index.png">
+    <meta id="og-image-width" property="og:image:width" content="1200">
+    <meta id="og-image-height" property="og:image:height" content="630">
     <meta property="og:type" content="website">
 
-    <meta id="twitter-url" property="twitter:url" content="">
-    <meta id="twitter-title" property="twitter:title" content="">
-    <meta id="twitter-description" property="twitter:description" content="">
-    <meta id="twitter-image" property="twitter:image" content="">
+    <meta id="twitter-url" property="twitter:url" content="https://blog.pebblous.ai/report/llm-dataset-guide-2025-10-16/ko/">
+    <meta id="twitter-title" property="twitter:title" content="LLM 학습용 오픈 데이터셋 가이드: 저작권 문제 없는 AI 및 데이터과학 분야를 중심으로 | Pebblous">
+    <meta id="twitter-description" property="twitter:description" content="어떤 데이터로 LLM을 학습시켜야 할까요? 주요 AI 연구소의 성공 사례를 바탕으로, AI 및 데이터과학 분야에서 상업적 활용이 가능한 대규모 오픈 데이터셋(RedPajama, The Pile, Dolma 등)을 분석하고, LLM 학습을 위한 데이터셋 혼합 전략과 법적 고려사항을 제시합니다.">
+    <meta id="twitter-image" property="twitter:image" content="https://blog.pebblous.ai/report/llm-dataset-guide-2025-10-16/index.png">
     <meta property="twitter:card" content="summary_large_image">
 
     <!-- Styles and Scripts -->
@@ -561,7 +561,7 @@
                 const pageTitle = `${config.mainTitle}: ${config.subtitle}`;
                 const fullTitle = `${pageTitle} | Pebblous`;
 
-                document.title = fullTitle;
+                // document.title = fullTitle; // 이제 HTML에 정적으로 설정됨
                 const h1Element = document.getElementById('page-h1-title');
                 h1Element.innerHTML = `
                     <span class="block text-5xl md:text-6xl font-bold leading-tight">${config.mainTitle}</span>
@@ -569,14 +569,16 @@
                 `;
                 h1Element.classList.remove('leading-snug');
 
+                // 아래의 메타 태그 설정은 HTML에 정적으로 포함되었으므로 주석 처리하거나 삭제 가능
+                /*
                 const fullURL = config.siteURL + config.pagePath;
-                const fullURL_en = fullURL.replace('/ko/', '/en/'); // 가상 영문 페이지 URL
+                const fullURL_en = fullURL.replace('/ko/', '/en/');
                 const socialImage = fullURL.replace('/ko/', '/'+config.socialImage)
                 document.getElementById('meta-description').setAttribute('content', config.seoDescription);
                 document.getElementById('meta-keywords').setAttribute('content', config.seoKeywords.join(', '));
                 document.getElementById('hreflang-ko').setAttribute('href', fullURL);
                 document.getElementById('hreflang-en').setAttribute('href', fullURL_en);
-                document.getElementById('hreflang-default').setAttribute('href', fullURL);
+                document.getElementById('hreflang-default').setAttribute('href', fullURL_en);
                 document.getElementById('canonical-url').setAttribute('href', fullURL);
                 document.getElementById('og-url').setAttribute('content', fullURL);
                 document.getElementById('og-title').setAttribute('content', fullTitle);
@@ -588,6 +590,7 @@
                 document.getElementById('twitter-title').setAttribute('content', fullTitle);
                 document.getElementById('twitter-description').setAttribute('content', config.seoDescription);
                 document.getElementById('twitter-image').setAttribute('content', socialImage);
+                */
             }
 
             function runApp() {
@@ -609,5 +612,4 @@
     </script>
 </body>
 </html>
-
 
