--- a/report/llm-dataset-guide-2025-10-16/ko/index.html
+++ b/report/llm-dataset-guide-2025-10-16/ko/index.html
@@ -385,6 +385,54 @@
                         2025년 법적 판례는 합법적으로 취득한 데이터로 학습하는 것이 '공정 사용'에 해당할 가능성이 높음을 시사하지만, <strong class="text-red-400">Books3, LibGen 등 불법 복제 저장소는 심각한 법적 리스크를 초래하므로 반드시 피해야 합니다.</strong>
                     </p>
                 </div>
+
+                <div class="mt-12">
+                    <h3 class="text-xl font-semibold themeable-heading mb-4 pb-2 border-b">관련 자료 다운로드</h3>
+                    <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+                        <!-- PDF Download Box -->
+                        <a href="https://blog.pebblous.ai/report/llm-dataset-guide-2025-10-16/ko/LLM 학습용 저작권 문제없는 기술 문서.pdf" target="_blank" rel="noopener noreferrer" class="themeable-card p-6 rounded-lg border flex flex-col hover:border-orange-500/50 hover:shadow-xl transition-all duration-300">
+                            <div class="flex-grow">
+                                <svg class="w-10 h-10 mb-3 themeable-accent" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m.75 12l3 3m0 0l3-3m-3 3v-6m-1.5-9H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z" />
+                                </svg>
+                                <h4 class="font-bold themeable-heading">법적 방어 가능 데이터 큐레이션 전략 가이드</h4>
+                                <p class="text-xs mt-2">AI 및 데이터 과학 분야 LLM 학습을 위한 상세한 법률 및 전략 가이드 PDF 문서를 다운로드하세요.</p>
+                            </div>
+                            <div class="mt-4 text-center themeable-accent border themeable-accent-border rounded-lg px-4 py-2 text-sm font-semibold">
+                                PDF 다운로드
+                            </div>
+                        </a>
+
+                        <!-- Placeholder Box 1 -->
+                        <div class="themeable-card p-6 rounded-lg border flex flex-col bg-opacity-50 border-dashed">
+                             <div class="flex-grow">
+                                <svg class="w-10 h-10 mb-3 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                  <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                </svg>
+                                <h4 class="font-bold text-gray-500">추후 공개될 자료 1</h4>
+                                <p class="text-xs mt-2 text-gray-400">새로운 가이드 또는 보고서가 준비 중입니다. 곧 업데이트될 예정입니다.</p>
+                            </div>
+                             <div class="mt-4 text-center border border-dashed border-gray-400 rounded-lg px-4 py-2 text-sm font-semibold text-gray-400">
+                                공개 예정
+                            </div>
+                        </div>
+
+                        <!-- Placeholder Box 2 -->
+                         <div class="themeable-card p-6 rounded-lg border flex flex-col bg-opacity-50 border-dashed">
+                             <div class="flex-grow">
+                                <svg class="w-10 h-10 mb-3 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                  <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                </svg>
+                                <h4 class="font-bold text-gray-500">추후 공개될 자료 2</h4>
+                                <p class="text-xs mt-2 text-gray-400">새로운 가이드 또는 보고서가 준비 중입니다. 곧 업데이트될 예정입니다.</p>
+                            </div>
+                             <div class="mt-4 text-center border border-dashed border-gray-400 rounded-lg px-4 py-2 text-sm font-semibold text-gray-400">
+                                공개 예정
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="mt-8 pt-6 border-t">
                     <h3 class="font-semibold themeable-heading mb-2">Disclaimer</h3>
                     <p class="text-sm">
@@ -541,7 +589,7 @@
                     .themeable-footer { background-color: ${theme.footerBackground}; }
                     .hover-accent:hover { color: ${theme.accentColor} !important; }
                     body, .themeable-card p, #page-meta-info, ul, td, .link-item, .themeable-subtitle { color: ${theme.textColor}; }
-                    main h2, table thead, table tbody tr, .border-t { border-color: ${theme.borderColor}; }
+                    main h2, table thead, table tbody tr, .border-t, .border-b { border-color: ${theme.borderColor}; }
                     footer, footer .border-t { border-color: ${theme.borderColor}; }
                 `;
                 document.querySelectorAll('#theme-switcher button').forEach(b => {
