--- a/index.html
+++ b/index.html
@@ -214,9 +214,11 @@
 
         <!-- Posts Section -->
         <section id="posts" class="container mx-auto px-6 py-20">
-            <!-- Data Art -->
+            <!-- Categories will be dynamically loaded -->
             <div id="art" class="mb-20">
-                <h2 class="text-3xl font-bold text-white mb-8 border-l-4 accent-border pl-4">Data Art</h2>
+                <h2 id="art-title" class="text-3xl font-bold text-white mb-8 border-l-4 accent-border pl-4">
+                    <span class="loading-text">Loading...</span>
+                </h2>
                 <div id="art-articles" class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <div class="flex justify-center items-center py-20">
                         <div class="loading"></div>
@@ -224,9 +226,10 @@
                 </div>
             </div>
 
-            <!-- Tech Insights -->
             <div id="tech" class="mb-20">
-                <h2 class="text-3xl font-bold text-white mb-8 border-l-4 accent-border pl-4">Tech Insights</h2>
+                <h2 id="tech-title" class="text-3xl font-bold text-white mb-8 border-l-4 accent-border pl-4">
+                    <span class="loading-text">Loading...</span>
+                </h2>
                 <div id="tech-articles" class="grid md:grid-cols-2 gap-8">
                     <div class="flex justify-center items-center py-20">
                         <div class="loading"></div>
@@ -234,9 +237,10 @@
                 </div>
             </div>
 
-            <!-- Data Stories -->
             <div id="story" class="mb-20">
-                <h2 class="text-3xl font-bold text-white mb-8 border-l-4 accent-border pl-4">Data Stories</h2>
+                <h2 id="story-title" class="text-3xl font-bold text-white mb-8 border-l-4 accent-border pl-4">
+                    <span class="loading-text">Loading...</span>
+                </h2>
                 <div id="story-articles" class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <div class="flex justify-center items-center py-20">
                         <div class="loading"></div>
@@ -544,14 +548,19 @@
         // ============================================================
 
         let allArticles = [];
+        let categories = {};
 
         async function loadArticles() {
             try {
                 const response = await fetch('articles.json');
                 const data = await response.json();
 
-                // Store all articles for search
+                // Store categories and articles
+                categories = data.categories;
                 allArticles = data.articles.filter(a => a.published);
+
+                // Update category titles with metadata from articles.json
+                updateCategoryTitles();
 
                 // Filter and group articles by category
                 const artArticles = allArticles.filter(a => a.category === 'art');
@@ -571,6 +580,26 @@
                     document.getElementById(id).innerHTML = '<p class="text-slate-400 text-center py-10">기사를 불러오는데 실패했습니다.</p>';
                 });
             }
+        }
+
+        function updateCategoryTitles() {
+            // Update each category title with icon and name from articles.json
+            Object.keys(categories).forEach(categoryKey => {
+                const category = categories[categoryKey];
+                const titleElement = document.getElementById(`${categoryKey}-title`);
+
+                if (titleElement) {
+                    titleElement.innerHTML = `
+                        <span class="inline-flex items-center gap-2">
+                            <span class="text-4xl">${category.icon}</span>
+                            <span>${category.name}</span>
+                        </span>
+                    `;
+
+                    // Add description as tooltip
+                    titleElement.title = category.description;
+                }
+            });
         }
 
         function setupSearch() {
@@ -625,11 +654,9 @@
             }
 
             resultsContainer.innerHTML = results.map(article => {
-                const categoryName = {
-                    'art': 'Data Art',
-                    'tech': 'Tech Insights',
-                    'story': 'Data Stories'
-                }[article.category];
+                // Get category metadata from articles.json
+                const categoryInfo = categories[article.category];
+                const categoryName = categoryInfo ? `${categoryInfo.icon} ${categoryInfo.name}` : article.category;
 
                 const tagsHtml = article.tags.map(tag => {
                     const highlighted = tag.toLowerCase().includes(query)
