--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
         // Load Articles from JSON
         async function loadArticles() {
             try {
-                const response = await fetch('articles.json');
+                const response = await fetch('articles.json', { cache: 'no-store' });
                 const data = await response.json();
 
                 // Filter and group articles by category
@@ -552,7 +552,7 @@
 
         async function loadArticles() {
             try {
-                const response = await fetch('articles.json');
+                const response = await fetch('articles.json', { cache: 'no-store' });
                 const data = await response.json();
 
                 // Store categories and articles
