image hovering update

--- a/index.html
+++ b/index.html
@@ -484,9 +484,9 @@
                 const isExternal = article.external || false;
                 const hasModal = article.hasModal || false;
                 const imageTag = article.image
-                    ? `<div class="relative w-full h-48 overflow-hidden group/img">
+                    ? `<div class="relative w-full h-48 overflow-hidden bg-slate-900/50 group/img">
                         <img src="${article.image}" alt="${article.title}"
-                             class="w-full h-48 object-cover transition-all duration-300 group-hover/img:scale-110 group-hover/img:object-contain group-hover/img:h-auto"
+                             class="w-full h-full object-cover transition-all duration-500 group-hover/img:object-contain group-hover/img:scale-90"
                              loading="lazy">
                        </div>`
                     : '';
