--- a/index.html
+++ b/index.html
@@ -303,9 +303,9 @@
             <div class="container mx-auto px-6 text-center">
                  <h2 class="text-3xl font-bold text-white">About the Founder</h2>
                  <div class="mt-12 max-w-4xl mx-auto md:flex items-center gap-12 text-left">
-                     <img src="https://i.imgur.com/Kz8E43p.png" alt="이주행 대표" class="w-48 h-48 rounded-full mx-auto md:mx-0 flex-shrink-0 object-cover border-4 border-slate-700" loading="lazy">
+                     <img src="/image/joohaeng_lee.png" alt="이주행 대표" class="w-48 h-48 rounded-full mx-auto md:mx-0 flex-shrink-0 object-cover border-4 border-slate-700" loading="lazy">
                      <div>
-                         <h3 class="text-2xl font-bold text-white mt-6 md:mt-0">이주행 (Joo-haeng Lee)</h3>
+                         <h3 class="text-2xl font-bold text-white mt-6 md:mt-0">이주행 (Joo-Haeng Lee, PhD)</h3>
                          <p class="accent-color font-semibold mt-1">CEO, Co-founder, Code Painting Artist</p>
                          <p class="mt-4 text-slate-400">POSTECH 컴퓨터공학 박사, ETRI 인공지능연구소 책임연구원 출신으로 컴퓨터 그래픽스, 로보틱스, AI 분야에서 수십 년의 연구 경력을 쌓았습니다. 동시에 2020년 대전 비엔날레 초대 작가로 활동하는 등 기술과 예술의 경계를 넘나드는 코드 페인팅 아티스트입니다. 그의 철학은 페블러스의 모든 제품과 서비스에 녹아 있습니다.</p>
                      </div>
