--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <header class="fixed top-0 left-0 right-0 z-50 bg-slate-950/80 backdrop-blur-sm border-b border-slate-800">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="/" aria-label="Pebblous 홈페이지">
-                <img src="https://pebblous.github.io/image/Pebblous_BM_White_RGB.png" alt="Pebblous Logo" class="h-7" loading="eager">
+                <img src="https://pebblous.github.io/image/Pebblous_BM_White_RGB.png" alt="Pebblous Logo" class="h-7 w-auto object-contain max-w-full" loading="eager">
             </a>
             <nav class="hidden md:flex items-center space-x-8 text-sm font-medium text-slate-300" aria-label="Main navigation">
                 <a href="#art" class="hover:text-white transition-colors">Data Art</a>
