--- a/project/CURK/ontology/palantir-vs-classic-ontology.html
+++ b/project/CURK/ontology/palantir-vs-classic-ontology.html
@@ -81,7 +81,7 @@
         "description": "정적 지식 표현에서 동적 운영 실행으로 변화하는 온톨로지 기술의 40년 진화 타임라인과 팔란티어 온톨로지의 3계층 아키텍처를 분석합니다. 전통 시맨틱 웹과 팔란티어의 운영 온톨로지를 비교하여 데이터 통합, 실시간 운영, AI 기반 의사결정의 혁신을 탐구합니다.",
         "image": {
             "@type": "ImageObject",
-            "url": "https://blog.pebblous.ai/project/CURK/ontology/image/palantir-vs-classic-ontology.html/palantir-vs-classic-ontology.html.001.png",
+            "url": "https://blog.pebblous.ai/project/CURK/ontology/image/palantir-vs-classic-ontology.png",
             "width": 1200,
             "height": 630
         },
@@ -245,7 +245,7 @@
         "@type": "HowTo",
         "name": "온톨로지의 진화 이해하기: 전통에서 팔란티어까지",
         "description": "40년간의 온톨로지 기술 발전을 단계별로 이해하는 가이드",
-        "image": "https://blog.pebblous.ai/project/CURK/ontology/image/palantir-vs-classic-ontology.html/palantir-vs-classic-ontology.html.001.png",
+        "image": "https://blog.pebblous.ai/project/CURK/ontology/image/palantir-vs-classic-ontology.png",
         "totalTime": "PT15M",
         "estimatedCost": {
             "@type": "MonetaryAmount",
@@ -1181,7 +1181,7 @@
 		        "에어버스", "Airbus", "제조업", "Manufacturing", "공급망", "Supply Chain",
 		        "딥테크", "Deep Tech", "CURK", "AADS", "Agentic AI"
 		    ],
-		    socialImage: "https://blog.pebblous.ai/project/CURK/ontology/image/palantir-vs-classic-ontology.html/palantir-vs-classic-ontology.html.001.png",
+		    socialImage: "https://blog.pebblous.ai/project/CURK/ontology/image/palantir-vs-classic-ontology.png",
 		    defaultTheme: "dark",
 		    themes: {
 		        dark: {
