--- a/project/CURK/ontology/palantir-vs-classic-ontology.html
+++ b/project/CURK/ontology/palantir-vs-classic-ontology.html
@@ -27,22 +27,22 @@
     <link rel="apple-touch-icon" href="https://www.pebblous.ai/apple-touch-icon.png">
 
     <!-- SEO Meta Tags -->
-    <title id="page-title"></title>
-    <meta id="meta-description" name="description" content="">
-    <meta id="meta-keywords" name="keywords" content="">
+    <title id="page-title">팔란티어 vs 전통 온톨로지: 40년의 진화 | Pebblous</title>
+    <meta id="meta-description" name="description" content="정적 지식 표현에서 동적 운영 실행으로 변화하는 온톨로지 기술의 40년 진화 타임라인과 팔란티어 온톨로지의 3계층 아키텍처(의미-동적-역동적)를 분석합니다. 전통 시맨틱 웹과 팔란티어의 운영 온톨로지를 비교하여 데이터 통합, 실시간 운영, AI 기반 의사결정의 혁신을 탐구합니다.">
+    <meta id="meta-keywords" name="keywords" content="Pebblous, 페블러스, 데이터클리닉, 페블로스코프, 데이터, Ontology, 온톨로지, 팔란티어, Palantir, Palantir Ontology, 운영 온톨로지, Operational Ontology, 시맨틱 웹, Semantic Web, OWL, RDF, SPARQL, 지식 공학, Knowledge Engineering, 디지털 트윈, Digital Twin, 운영 그래프, Operational Graph, 지식 그래프, Knowledge Graph, 데이터 통합, Data Integration, 실시간 데이터, Real-time Data, 데이터 품질, Data Quality, AI, 인공지능, 머신러닝, Machine Learning, 의사결정 지원, Decision Support, 엔터프라이즈 데이터, Enterprise Data, 데이터 사일로, Data Silo, 데이터 모델링, 에어버스, Airbus, 제조업, Manufacturing, 공급망, Supply Chain, 딥테크, Deep Tech, CURK, AADS, Agentic AI">
     <meta name="robots" content="index, follow">
 
-    <link id="hreflang-ko" rel="alternate" hreflang="ko" href="">
-    <link id="hreflang-en" rel="alternate" hreflang="en" href="">
-    <link id="hreflang-default" rel="alternate" hreflang="x-default" href="">
+    <link id="hreflang-ko" rel="alternate" hreflang="ko" href="https://blog.pebblous.ai/project/CURK/ontology/palantir-vs-classic-ontology.html">
+    <link id="hreflang-en" rel="alternate" hreflang="en" href="https://blog.pebblous.ai/project/CURK/ontology/palantir-vs-classic-ontology.html">
+    <link id="hreflang-default" rel="alternate" hreflang="x-default" href="https://blog.pebblous.ai/project/CURK/ontology/palantir-vs-classic-ontology.html">
 
-    <link id="canonical-url" rel="canonical" href=""> 
+    <link id="canonical-url" rel="canonical" href="https://blog.pebblous.ai/project/CURK/ontology/palantir-vs-classic-ontology.html"> 
 
 
-    <meta id="og-url" property="og:url" content="">
-    <meta id="og-title" property="og:title" content="">
-    <meta id="og-description" property="og:description" content="">
-    <meta id="og-image" property="og:image" content="">
+    <meta id="og-url" property="og:url" content="https://blog.pebblous.ai/project/CURK/ontology/palantir-vs-classic-ontology.html">
+    <meta id="og-title" property="og:title" content="팔란티어 vs 전통 온톨로지: 40년의 진화 | Pebblous">
+    <meta id="og-description" property="og:description" content="정적 지식 표현에서 동적 운영 실행으로 변화하는 온톨로지 기술의 40년 진화 타임라인과 팔란티어 온톨로지의 3계층 아키텍처(의미-동적-역동적)를 분석합니다. 전통 시맨틱 웹과 팔란티어의 운영 온톨로지를 비교하여 데이터 통합, 실시간 운영, AI 기반 의사결정의 혁신을 탐구합니다.">
+    <meta id="og-image" property="og:image" content="https://blog.pebblous.ai/project/CURK/ontology/image/palantir-vs-classic-ontology.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="팔란티어 vs 전통 온톨로지 비교 인포그래픽">
@@ -59,10 +59,10 @@
     <meta property="article:tag" content="Data Integration">
     <meta property="article:tag" content="AI">
 
-    <meta id="twitter-url" property="twitter:url" content="">
-    <meta id="twitter-title" property="twitter:title" content="">
-    <meta id="twitter-description" property="twitter:description" content="">
-    <meta id="twitter-image" property="twitter:image" content="">
+    <meta id="twitter-url" property="twitter:url" content="https://blog.pebblous.ai/project/CURK/ontology/palantir-vs-classic-ontology.html">
+    <meta id="twitter-title" property="twitter:title" content="팔란티어 vs 전통 온톨로지: 40년의 진화 | Pebblous">
+    <meta id="twitter-description" property="twitter:description" content="정적 지식 표현에서 동적 운영 실행으로 변화하는 온톨로지 기술의 40년 진화 타임라인과 팔란티어 온톨로지의 3계층 아키텍처(의미-동적-역동적)를 분석합니다. 전통 시맨틱 웹과 팔란티어의 운영 온톨로지를 비교하여 데이터 통합, 실시간 운영, AI 기반 의사결정의 혁신을 탐구합니다.">
+    <meta id="twitter-image" property="twitter:image" content="https://blog.pebblous.ai/project/CURK/ontology/image/palantir-vs-classic-ontology.png">
     <meta name="twitter:image:alt" content="팔란티어 vs 전통 온톨로지 비교 다이어그램">
     <meta property="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@pebblous">
